# byth

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
bindings/: foundry.toml
bindings/src/: BythTest.sol
bindings/test/: BythTestTest.sol
crates/byth/: Cargo.toml
crates/byth/src/: main.rs
crates/byth/src/cli/: mod.rs
crates/byth/src/db/: mod.rs
crates/byth/src/ethereum/: block.rs  mod.rs  rpc.rs
crates/byth/src/foundry/: mod.rs
crates/byth/src/internals/: mod.rs
crates/byth/src/observe/: handler.rs  mod.rs
detectors_default/: foundry.toml
detectors_default/test/: Detectors.t.sol
fixtures/: remappings.txt
fixtures/src/: Byth.Utils.sol
fixtures/test/: Byth.Utils.t.sol  Fixtures.t.sol
