[package]
name = "byth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsaidb = { version = "0.4", features = ["local"] }
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive", "env"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
ethers = { version = "2.0.11", features = ["ws"] }
fs_extra = "1.3.0"
futures = "0.3.29"
nanoid = "0.4.0"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
walkdir = "2.4.0"
